[package]
name = "qute"
description = "designify your terminal with a large ansi colors palette"
version = "0.0.4"
license = "MIT"
homepage = "https://github.com/qurity"
readme = "README.md"
repository = "https://github.com/qurity/qute"
authors = ["monsieurbadia <contact@monsieurbadia.com>"]
edition = "2018"
