[package]
name = "qute"
version = "0.0.13"
authors = ["monsieurbadia <contact@monsieurbadia.com>"]
description = "designify your terminal with a large ansi colors palette 🎨"
homepage = "https://github.com/qurity"
repository = "https://github.com/qurity/qute"
readme = "README.md"
license = "MIT"
edition = "2018"

exclude = [
  "doc/**/*",
  "examples/**/*",
  "target/**/*",
  "tests/**/*",
  "Cargo.lock",
]

keywords = [
  "ansi",
  "color",
  "qute",
]

categories = [
  "command-line-interface",
  "development-tools"
]

[lib]
doctest = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1